--- a/EmployeeFormTask/Views/_ViewImports.cshtml
+++ b/EmployeeFormTask/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using EmployeeFormTask
 @using EmployeeFormTask.Models
+@using EmployeeFormTask.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
